--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,29 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.121"
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
 
     <AnchorPane fx:id="mainPane" prefHeight="600.0" prefWidth="600.0" GridPane.rowIndex="1">
-        <Button id="btn11" fx:id="btn11" layoutX="1.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" />
-        <Button id="btn12" fx:id="btn12" layoutX="200.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" />
-        <Button id="btn13" fx:id="btn13" layoutX="400.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" />
-        <Button id="btn21" fx:id="btn21" layoutY="200.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" />
-        <Button id="btn22" fx:id="btn22" layoutX="200.0" layoutY="200.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" />
-        <Button id="btn23" fx:id="btn23" layoutX="400.0" layoutY="200.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" />
-        <Button id="btn31" fx:id="btn31" layoutY="400.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" />
-        <Button id="btn32" fx:id="btn32" layoutX="200.0" layoutY="400.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" />
-        <Button id="btn33" fx:id="btn33" layoutX="400.0" layoutY="400.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" />
+        <Separator fx:id="separator1" layoutX="182.0" layoutY="58.0" orientation="VERTICAL" prefHeight="415.0"
+                   prefWidth="22.0"/>
+        <Separator fx:id="separator2" layoutX="421.0" layoutY="58.0" orientation="VERTICAL" prefHeight="421.0"
+                   prefWidth="30.0" style=""/>
+        <Separator fx:id="separator3" layoutX="53.0" layoutY="102.0" prefHeight="50.0" prefWidth="494.0"/>
+        <Separator fx:id="separator4" layoutX="74.0" layoutY="373.0" prefHeight="39.0" prefWidth="465.0"/>
+        <Button fx:id="btn11" alignment="CENTER" layoutX="58.0" layoutY="11.0" mnemonicParsing="false"
+                prefHeight="110.0" prefWidth="128.0" style="-fx-background-color: transparent;"
+                styleClass="gameBoardButton"/>
+        <Button fx:id="btn12" layoutX="214.0" layoutY="23.0" mnemonicParsing="false" prefHeight="98.0" prefWidth="189.0"
+                style="-fx-background-color: transparent;"/>
+        <Button fx:id="btn13" layoutX="444.0" layoutY="42.0" mnemonicParsing="false" prefHeight="78.0" prefWidth="128.0"
+                style="-fx-background-color: transparent;"/>
+        <Button fx:id="btn21" layoutX="60.0" layoutY="192.0" mnemonicParsing="false" prefHeight="116.0"
+                prefWidth="122.0" style="-fx-background-color: transparent;"/>
+        <Button fx:id="btn22" layoutX="206.0" layoutY="181.0" mnemonicParsing="false" prefHeight="161.0"
+                prefWidth="202.0" style="-fx-background-color: transparent;"/>
+        <Button fx:id="btn23" layoutX="445.0" layoutY="183.0" mnemonicParsing="false" prefHeight="132.0"
+                prefWidth="141.0" style="-fx-background-color: transparent;"/>
+        <Button fx:id="btn31" layoutX="69.0" layoutY="402.0" mnemonicParsing="false" prefHeight="89.0" prefWidth="115.0"
+                style="-fx-background-color: transparent;"/>
+        <Button fx:id="btn32" layoutX="245.0" layoutY="402.0" mnemonicParsing="false" prefHeight="89.0"
+                prefWidth="128.0" style="-fx-background-color: transparent;"/>
+        <Button fx:id="btn33" layoutX="445.0" layoutY="402.0" mnemonicParsing="false" prefHeight="78.0"
+                prefWidth="101.0" style="-fx-background-color: transparent;"/>
     </AnchorPane>
-   <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-      <RowConstraints />
-   </rowConstraints>
+    <columnConstraints>
+        <ColumnConstraints/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints/>
+        <RowConstraints/>
+    </rowConstraints>
 </GridPane>
