--- a/src/view/board.fxml
+++ b/src/view/board.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 <GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.121"
-          xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BaseController">
 
     <AnchorPane fx:id="mainPane" prefHeight="600.0" prefWidth="600.0" GridPane.rowIndex="1">
         <Separator fx:id="separator1" layoutX="182.0" layoutY="58.0" orientation="VERTICAL" prefHeight="415.0"
