--- a/tictactoe-client/src/main/resources/board.fxml
+++ b/tictactoe-client/src/main/resources/board.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 
 <GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BaseController">
-    <AnchorPane fx:id="anchorPane" prefHeight="600.0" prefWidth="600.0" GridPane.rowIndex="1">
+    <AnchorPane fx:id="anchorPane" prefHeight="386.0" prefWidth="586.0" GridPane.rowIndex="1">
         <Separator fx:id="separator1" layoutX="182.0" layoutY="58.0" orientation="VERTICAL" prefHeight="415.0" prefWidth="22.0" />
         <Separator fx:id="separator2" layoutX="421.0" layoutY="58.0" orientation="VERTICAL" prefHeight="421.0" prefWidth="30.0" style="" />
         <Separator fx:id="separator3" layoutX="53.0" layoutY="102.0" prefHeight="50.0" prefWidth="494.0" />
@@ -22,7 +22,7 @@
          <font>
             <Font size="62.0" />
          </font></Button>
-        <Button id="btn02" fx:id="btn02" layoutX="444.0" layoutY="42.0" mnemonicParsing="false" prefHeight="78.0" prefWidth="128.0" style="-fx-background-color: transparent;">
+        <Button id="btn02" fx:id="btn02" layoutX="457.0" layoutY="42.0" mnemonicParsing="false" prefHeight="132.0" prefWidth="128.0" style="-fx-background-color: transparent;">
          <font>
             <Font size="62.0" />
          </font></Button>
@@ -34,7 +34,7 @@
          <font>
             <Font size="62.0" />
          </font></Button>
-        <Button id="btn12" fx:id="btn12" layoutX="445.0" layoutY="183.0" mnemonicParsing="false" prefHeight="132.0" prefWidth="141.0" style="-fx-background-color: transparent;">
+        <Button id="btn12" fx:id="btn12" layoutX="429.0" layoutY="183.0" mnemonicParsing="false" prefHeight="132.0" prefWidth="157.0" style="-fx-background-color: transparent;">
          <font>
             <Font size="62.0" />
          </font></Button>
@@ -51,6 +51,11 @@
             <Font size="62.0" />
          </font></Button>
     </AnchorPane>
+   <Button fx:id="reset" onAction="#onActionReset" mnemonicParsing="false" style="-fx-background-color: #2E3348;" text="Reset" textFill="WHITE">
+      <font>
+         <Font name="Times New Roman" size="22.0" />
+      </font>
+   </Button>
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
